--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <meta charset="utf8">
+  <title>Ops... esta página não existe (404)</title>
   <style>
   body {
     background-color: #EFEFEF;
@@ -17,7 +18,7 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
+    border-top: #0B61A4 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
@@ -26,7 +27,7 @@
 
   h1 {
     font-size: 100%;
-    color: #730E15;
+    color: #3F92D2;
     line-height: 1.5em;
   }
 
@@ -50,9 +51,9 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <a href="/sip"><img src="/sip/assets/logo.png" alt="ATS"></a>
+    <h1>Ops... a página que você está tentando abrir não existe.</h1>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>Talvez você tenha digitado errado ou a página foi movida.</p>
 </body>
 </html>
