--- a/public/422.html
+++ b/public/422.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
+  <title>A alteração que você queria foi rejeitada (422)</title>
   <style>
   body {
     background-color: #EFEFEF;
@@ -17,7 +17,7 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
+    border-top: #0B61A4 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
@@ -26,7 +26,7 @@
 
   h1 {
     font-size: 100%;
-    color: #730E15;
+    color: #3F92D2;
     line-height: 1.5em;
   }
 
@@ -50,9 +50,8 @@
 <body>
   <!-- This file lives in public/422.html -->
   <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+    <h1>A alteração que você queria foi rejeitada.</h1>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>Talvez você tenha tentado mudar algo que você não tem acesso.</p>
 </body>
 </html>
