--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <meta charset="utf8">
+  <title>Alguma coisa deu errado (500)</title>
   <style>
   body {
     background-color: #EFEFEF;
@@ -17,7 +18,7 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
+    border-top: #0B61A4 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
@@ -26,7 +27,7 @@
 
   h1 {
     font-size: 100%;
-    color: #730E15;
+    color: #3F92D2;
     line-height: 1.5em;
   }
 
@@ -50,8 +51,9 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <a href="/sip"><img src="/sip/assets/logo.png" alt="ATS"></a>
+    <h1>Desculpe, mas algma coisa deu errado.</h1>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>Se você precisa acessar essa página. Entre em contato com a TI.</p>
 </body>
 </html>
