--- a/public/422.html
+++ b/public/422.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf8">
   <title>A alteração que você queria foi rejeitada (422)</title>
   <style>
   body {
@@ -50,6 +51,7 @@
 <body>
   <!-- This file lives in public/422.html -->
   <div class="dialog">
+    <a href="/sip"><img src="/sip/assets/logo.png" alt="ATS"></a>
     <h1>A alteração que você queria foi rejeitada.</h1>
   </div>
   <p>Talvez você tenha tentado mudar algo que você não tem acesso.</p>
